@@ -1,3 +1,8 @@
+[0, 15, 96]: 2019-05-16
+  - fix failure to indent comments on round-trip anchored block style
+    scalars in block sequence (reported by `William Kimball
+    <https://bitbucket.org/%7Bba35ed20-4bb0-46f8-bb5d-c29871e86a22%7D/>`__)
+
 [0, 15, 95]: 2019-05-16
   - fix failure to round-trip anchored scalars in block sequence
     (reported by `William Kimball
